# test-repo

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: deps-sync.yml
