[project]
name = "sd-base-api"
dynamic = ["version"]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "skrample @ git+https://github.com/Beinsezii/skrample.git@0a3ffb60026a0b4ec945cbdbdaed68fb1f3ade5c"
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[dependency-groups]
testing = ["pyright==1.1.*", "pytest==8.3.*", "ruff==0.9.*"]
